--- a/CourseFiles/PseudoSelectors/Focus.css
+++ b/CourseFiles/PseudoSelectors/Focus.css
@@ -1,5 +1,5 @@
 body{
-  background-color: bisque;
+  background-color:burlywood;
   color: black;
   padding: 0 10px 20px;
   margin-top: 150px;
@@ -8,10 +8,6 @@ body{
 #body{
   padding: 0 10px 20px;
   height: 1000px;
-}
-
-hr{
-  color: red;
 }
 
 nav{
@@ -29,21 +25,17 @@ nav{
 
 /* Keep above this line */
 
-
-input:disabled{
-  background-color: green;
-  border: 2px solid red;
-  opacity: 0.25px;
+.test{
+  width: 100%;
+  font-size: 30px;
+  padding: 10px 2px;
+  color: #999;
+  opacity: 0.25;
 }
 
-
-
-
-
-
-
-
-
-
-
-
+.test:focus{
+  border: 4px solid black;
+  outline: 0;
+  color: #000;
+  opacity: 1;
+}
