--- a/CourseFiles/CSS3/BackgroundImages/MultipleBackgroundImages.css
+++ b/CourseFiles/CSS3/BackgroundImages/MultipleBackgroundImages.css
@@ -27,26 +27,19 @@ nav{
 }
 
 /* Keep above this line */
-
-html{
-  height: 100%;
+.round {
+  border-radius: 50%;
 }
 
-body{
-  background-color: bisque;
-  /* background: linear-gradient(to bottom, #f5f5f5, #000); */
-
- /* background: radial-gradient(circle, red 5%, blue 15%, yellow 25%);
-  */
-  height: 100%;
-  color: black;
-  margin-top: 150px;
-  padding: 0 20px 0px 0;
-  overflow: hidden;
-}
-
-.box{
+.stone{
+  display: inline-block;
+  width: 300px;
   height: 200px;
-  width: 400px;
-  background: radial-gradient(circle, red, blue, yellow);
+  border: 2px solid red;
+
+  background-size: 20%, 100%;
+  
+  background-image: url('../img/peasant.jpeg'), url('../img/stone.png');
+  background-position: left bottom, center center;
+  background-repeat: repeat-x, no-repeat;
 }
