--- a/CourseFiles/CSS3/Colors/OpacityVSAlpha.css
+++ b/CourseFiles/CSS3/Colors/OpacityVSAlpha.css
@@ -28,25 +28,19 @@ nav{
 
 /* Keep above this line */
 
-html{
-  height: 100%;
-}
-
-body{
-  background-color: bisque;
-  /* background: linear-gradient(to bottom, #f5f5f5, #000); */
-
- /* background: radial-gradient(circle, red 5%, blue 15%, yellow 25%);
-  */
-  height: 100%;
-  color: black;
-  margin-top: 150px;
-  padding: 0 20px 0px 0;
-  overflow: hidden;
-}
-
 .box{
+  display: inline-block;
+  width: 200px;
   height: 200px;
-  width: 400px;
-  background: radial-gradient(circle, red, blue, yellow);
+  border: 2px solid red;
+  background-color: black;
+  color: blue;
+}
+
+.opa{
+  opacity: 0.12;
+}
+
+.alpha{
+  background-color: rgba(255, 255, 255, 0.12);
 }
