--- a/CourseFiles/CSS3/Gradients/LinearGradientColorsAndTransparency.css
+++ b/CourseFiles/CSS3/Gradients/LinearGradientColorsAndTransparency.css
@@ -1,9 +1,9 @@
-body{
+/* body{
   background-color: bisque;
   color: black;
   margin-top: 150px;
   padding: 0 20px 0px 0;
-}
+} */
 
 #body{
   height: 1000px;
@@ -28,25 +28,10 @@ nav{
 
 /* Keep above this line */
 
-html{
-  height: 100%;
-}
-
 body{
   background-color: bisque;
-  /* background: linear-gradient(to bottom, #f5f5f5, #000); */
-
- /* background: radial-gradient(circle, red 5%, blue 15%, yellow 25%);
-  */
-  height: 100%;
+  background: linear-gradient(to bottom, #f5f5f5, #000);
   color: black;
   margin-top: 150px;
   padding: 0 20px 0px 0;
-  overflow: hidden;
-}
-
-.box{
-  height: 200px;
-  width: 400px;
-  background: radial-gradient(circle, red, blue, yellow);
 }
