--- a/CourseFiles/CSS3/Gradients/LinearGradients.css
+++ b/CourseFiles/CSS3/Gradients/LinearGradients.css
@@ -28,25 +28,18 @@ nav{
 
 /* Keep above this line */
 
-html{
-  height: 100%;
-}
+/* .box{
+  background-color: bisque;
+  height: 400px;
+  background: linear-gradient(tan, grey);
+} */
+
+/* body{
+  background-color: #ccc;
+  background: linear-gradient(to bottom right, red, tan);
+} */
 
 body{
-  background-color: bisque;
-  /* background: linear-gradient(to bottom, #f5f5f5, #000); */
-
- /* background: radial-gradient(circle, red 5%, blue 15%, yellow 25%);
-  */
-  height: 100%;
-  color: black;
-  margin-top: 150px;
-  padding: 0 20px 0px 0;
-  overflow: hidden;
-}
-
-.box{
-  height: 200px;
-  width: 400px;
-  background: radial-gradient(circle, red, blue, yellow);
+  background-color: #ccc;
+  background: linear-gradient(88deg, red, tan);
 }
