--- a/CourseFiles/CSS3/Gradients/RadialGradients.css
+++ b/CourseFiles/CSS3/Gradients/RadialGradients.css
@@ -1,9 +1,9 @@
-body{
+/* body{
   background-color: bisque;
   color: black;
   margin-top: 150px;
   padding: 0 20px 0px 0;
-}
+} */
 
 #body{
   height: 1000px;
