--- a/CourseFiles/CSS3/Gradients/RepeatingLinearGradients.css
+++ b/CourseFiles/CSS3/Gradients/RepeatingLinearGradients.css
@@ -1,9 +1,9 @@
-body{
+/* body{
   background-color: bisque;
   color: black;
   margin-top: 150px;
   padding: 0 20px 0px 0;
-}
+} */
 
 #body{
   height: 1000px;
@@ -36,17 +36,10 @@ body{
   background-color: bisque;
   /* background: linear-gradient(to bottom, #f5f5f5, #000); */
 
- /* background: radial-gradient(circle, red 5%, blue 15%, yellow 25%);
-  */
+  background: repeating-linear-gradient(10deg,red, blue 10%, yellow 30%);
   height: 100%;
   color: black;
   margin-top: 150px;
   padding: 0 20px 0px 0;
   overflow: hidden;
-}
-
-.box{
-  height: 200px;
-  width: 400px;
-  background: radial-gradient(circle, red, blue, yellow);
 }
