--- a/CourseFiles/CSS3/Shadows/BoxShadow.css
+++ b/CourseFiles/CSS3/Shadows/BoxShadow.css
@@ -2,7 +2,7 @@ body{
   background-color: bisque;
   color: black;
   font-size: 1.3rem;
-  margin-top: 175px;
+  margin-top: 150px;
   padding: 0 20px 0px 0;
 }
 
@@ -37,38 +37,15 @@ nav{
 
 /* Keep above this line */
 
-.card{
-  display: inline-block;
-  height: 300px;
-  width: 225px;
-  border: 1px solid green;
-  background-color: aquamarine;
-  color: #000;
-  text-decoration: none;
-  transition: 250ms box-shadow ease-in-out;
-  margin: 10px 5px;
-}
-
-.card:hover{
-  box-shadow: 5px 5px 0 black;
-}
-
-.card-text{
-  padding: 10px;
-}
-
-.card:hover .card-title{
-  text-decoration: underline;
-}
-
-.card-title{
-  font-weight: 900;
-  padding-bottom: 5px;
-  margin-bottom: 5px;
-  border-bottom: 1px solid #ccc;
-}
-
-.card-content{
-  padding: 10px 0 15px;
-  font-size: 14px;
+.box{
+  display: block;
+  width: 200px;
+  height: 200px;
+  background-color: grey;
+  border: 2px solid grey;
+  margin: 50px auto;
+  padding: 2px;
+  border-radius: 50%;
+  /* box-shadow: 5px 5px 80px rgb(68, 66, 66); */
+  box-shadow: inset 1cm 0 0 gold;
 }
