--- a/CourseFiles/CSS3/Transformations/MultipleTransformations.css
+++ b/CourseFiles/CSS3/Transformations/MultipleTransformations.css
@@ -46,19 +46,14 @@ nav{
   text-align: center;
   width: 200px;
   height: 200px;
-  background-color: rgb(95, 38, 38);
-  transition: 1s all ease-out;
+  background-color: brown;
+  transition: 250ms linear;
 }
 
 .box:hover{
-  /* transform: rotateZ(180deg)
-             rotateY(180deg)
-             rotateZ(180deg);
-  background-color: blue;
-   */
-   /* transform: skew(-30deg) skewY(-30deg); */
-   /* transform: scale(1.1); */
-   /* transform: scaleX(2); */
-   transform: translateX(50px) translateY(50px);
-   background-color: blue;
+  transform: scale(1.1) 
+             translate(20px, 20px)
+             skewX(30deg);
+             skewY(10deg);
+  color: green;
 }
