--- a/CourseFiles/CSS3/Transformations/TransformRotate.css
+++ b/CourseFiles/CSS3/Transformations/TransformRotate.css
@@ -38,27 +38,19 @@ nav{
 
 /* Keep above this line */
 
-
-.box{
-  display: inline-block;
-  margin-left: 50px;
-  color: whitesmoke;
+ .box{
+  margin-top: 30px;
+  /* above is my addition for my design */
+  width: 150px;
+  height: 150px;
+  padding: 50px;
+  background-color: rgb(121, 26, 26);
+  margin: 0 auto;
   text-align: center;
-  width: 200px;
-  height: 200px;
-  background-color: rgb(95, 38, 38);
-  transition: 1s all ease-out;
-}
+  color: white;
+  transition: 1s all liner;
+} 
 
 .box:hover{
-  /* transform: rotateZ(180deg)
-             rotateY(180deg)
-             rotateZ(180deg);
-  background-color: blue;
-   */
-   /* transform: skew(-30deg) skewY(-30deg); */
-   /* transform: scale(1.1); */
-   /* transform: scaleX(2); */
-   transform: translateX(50px) translateY(50px);
-   background-color: blue;
-}
+  transform: rotate(45deg);
+} 
