--- a/CourseFiles/CSS3/Transformations/TransformTranslate.css
+++ b/CourseFiles/CSS3/Transformations/TransformTranslate.css
@@ -38,27 +38,27 @@ nav{
 
 /* Keep above this line */
 
-
 .box{
-  display: inline-block;
-  margin-left: 50px;
-  color: whitesmoke;
-  text-align: center;
-  width: 200px;
-  height: 200px;
-  background-color: rgb(95, 38, 38);
-  transition: 1s all ease-out;
+  margin-top: 30px;
+  /* above is my addition for my design */
+  width: 150px;
+  height: 150px;
+  background-color: brown;
+  position: relative;
+  left: 25%;
 }
 
-.box:hover{
-  /* transform: rotateZ(180deg)
-             rotateY(180deg)
-             rotateZ(180deg);
-  background-color: blue;
-   */
-   /* transform: skew(-30deg) skewY(-30deg); */
-   /* transform: scale(1.1); */
-   /* transform: scaleX(2); */
-   transform: translateX(50px) translateY(50px);
-   background-color: blue;
+.box::before{
+  content: ' ';
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  z-index: -1;
+
+  transform: translate(-20px, -20px);
+  /* transform: translateX(-20px); */
+  /* transform: translateY(-20px); */
 }
