--- a/CourseFiles/CSS3/Transitions/TransitionColor.css
+++ b/CourseFiles/CSS3/Transitions/TransitionColor.css
@@ -38,27 +38,15 @@ nav{
 
 /* Keep above this line */
 
-
-.box{
-  display: inline-block;
-  margin-left: 50px;
-  color: whitesmoke;
-  text-align: center;
-  width: 200px;
-  height: 200px;
-  background-color: rgb(95, 38, 38);
-  transition: 1s all ease-out;
+.transition-test{
+  text-decoration: none;
+  color: black;
+  font-size: 14px;
+  transition-duration: 1.3s;
+  transition-property: color;
+  transition-timing-function: linear;
 }
 
-.box:hover{
-  /* transform: rotateZ(180deg)
-             rotateY(180deg)
-             rotateZ(180deg);
-  background-color: blue;
-   */
-   /* transform: skew(-30deg) skewY(-30deg); */
-   /* transform: scale(1.1); */
-   /* transform: scaleX(2); */
-   transform: translateX(50px) translateY(50px);
-   background-color: blue;
+.transition-test:hover{
+  color: green;
 }
