--- a/CourseFiles/CSS3/Transitions/TransitionDelay.css
+++ b/CourseFiles/CSS3/Transitions/TransitionDelay.css
@@ -38,27 +38,28 @@ nav{
 
 /* Keep above this line */
 
-
-.box{
-  display: inline-block;
-  margin-left: 50px;
-  color: whitesmoke;
-  text-align: center;
-  width: 200px;
-  height: 200px;
-  background-color: rgb(95, 38, 38);
-  transition: 1s all ease-out;
+.parent{
+  position: relative;
+  height: 50px;
+  background-color: white;
 }
 
-.box:hover{
-  /* transform: rotateZ(180deg)
-             rotateY(180deg)
-             rotateZ(180deg);
-  background-color: blue;
-   */
-   /* transform: skew(-30deg) skewY(-30deg); */
-   /* transform: scale(1.1); */
-   /* transform: scaleX(2); */
-   transform: translateX(50px) translateY(50px);
-   background-color: blue;
+.child{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(139, 46, 46);
+  transition-duration: 2s;
+  transition-property: left;
+  transition-timing-function: linear;
+  transition-delay: 2s;
+  /* ease is the default value */
+  /* transition-timing-function: ease; */
+  /* transition-timing-function: ease-in-out; */
+}
+
+.parent:hover .child{
+  left: calc(100% - 50px);
 }
