--- a/CourseFiles/CSS3/Animations/AnimationsFillMode.css
+++ b/CourseFiles/CSS3/Animations/AnimationsFillMode.css
@@ -13,7 +13,6 @@ body{
 hr{
   color: rebeccapurple;
   margin-bottom: 20px;
-  width: 50%;
 }
 
 nav{
@@ -39,21 +38,37 @@ nav{
 
 /* Keep above this line */
 
+@keyframes boxAnimation {
+  0%{ /* 1st second */
+    
+  }
 
+  25%{ /* 2nd second */
+    width: 100%;
+    text-align: center;
+  }
+
+  50%{ /* 3rd second */
+    background-color: brown;
+    height: 200px;
+
+  }
+
+  100%{  /* 4th second */
+    border: 3px solid green;
+    width: 100%;
+    height: 400px;
+  }
+}
 
 .box{
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 75px;
-  height: 75px;
+  margin: 0 auto;
+  width: 150px;
+  height: 158px;
   border: 1px solid yellow;
   background-color: aquamarine;
 
-  animation-name: blinkingAnimation;
-  animation-duration: 10s;
+  animation-name: boxAnimation;
+  animation-duration: 4s;
   animation-fill-mode: forwards;
-  animation-delay: 2s;
 }
-
-
