--- a/CourseFiles/CSS3/Animations/Directions.css
+++ b/CourseFiles/CSS3/Animations/Directions.css
@@ -13,7 +13,6 @@ body{
 hr{
   color: rebeccapurple;
   margin-bottom: 20px;
-  width: 50%;
 }
 
 nav{
@@ -39,21 +38,55 @@ nav{
 
 /* Keep above this line */
 
+@keyframes blinkingAnimation {
+  0%{ /* 1st second */
+    background-color: brown;
+  }
 
+  25%{
+    background-color: white;
+  }
+
+  50%{
+    background-color: yellow;
+    text-align: center;
+  }
+
+  75%{
+    background-color: green;
+    text-align: center;
+  }
+
+  100%{
+    background-color: powderblue;
+    text-align: right;
+  }
+  
+}
 
 .box{
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 75px;
-  height: 75px;
+  margin: 0 auto;
+  width: 150px;
+  height: 158px;
   border: 1px solid yellow;
   background-color: aquamarine;
 
   animation-name: blinkingAnimation;
-  animation-duration: 10s;
+  animation-duration: 4s;
   animation-fill-mode: forwards;
-  animation-delay: 2s;
+  animation-delay: 1s;
+  animation-iteration-count: 3;
+  /* animation-direction: normal; */
+  /* animation-direction: reverse; */
+  animation-direction: alternate;
 }
 
+.count-4{
+  animation-iteration-count: 4;
+  text-align: left;
+}
 
+.count-6{
+  animation-iteration-count: 6;
+  text-align: center;
+}
