--- a/CourseFiles/CSS3/Animations/TimingFunction.css
+++ b/CourseFiles/CSS3/Animations/TimingFunction.css
@@ -13,7 +13,6 @@ body{
 hr{
   color: rebeccapurple;
   margin-bottom: 20px;
-  width: 50%;
 }
 
 nav{
@@ -39,21 +38,43 @@ nav{
 
 /* Keep above this line */
 
+@keyframes blinkingAnimation {
+  0%{ /* 1st second */
+    margin-left: 0;
+  }
 
+  100%{
+   margin-left: 200px;
+  }
+  
+}
 
 .box{
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 75px;
-  height: 75px;
+  margin: 0;
+  width: 150px;
+  height: 158px;
   border: 1px solid yellow;
   background-color: aquamarine;
 
   animation-name: blinkingAnimation;
-  animation-duration: 10s;
+  animation-duration: 4s;
   animation-fill-mode: forwards;
-  animation-delay: 2s;
+  animation-delay: 1s;
+  animation-iteration-count: 4;
+  /* animation-direction: normal; */
+  animation-direction: alternate;
+  /* animation-timing-function: linear; */
+  /* animation-timing-function: ease-out; */
+  /* animation-timing-function: ease-in; */
+  /* animation-timing-function: ease-in-out; */
 }
 
+.count-4{
+  animation-iteration-count: 4;
+  text-align: left;
+}
 
+.count-6{
+  animation-iteration-count: 6;
+  text-align: center;
+}
