--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,19 @@ body{
   height: 1000px;
 }
 
+footer{
+  text-align: center;
+  margin-right: -17px ;
+  border: 2px solid green;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: aliceblue;
+  /* position: fixed; */
+  left: 0;
+  top: 0;
+  right: 0; 
+}
+
 hr{
   color: rebeccapurple;
   margin-bottom: 20px;
