--- a/CourseFiles/CSS3/Flexbox/AlignItems.css
+++ b/CourseFiles/CSS3/Flexbox/AlignItems.css
@@ -56,23 +56,23 @@ nav{
 
 .flex{
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-content: space-between;
-
   background-color: rgb(100, 150, 100);
-  height: 500px;
+  border: 1px solid blue;
+  height: 300px;
+  align-items: flex-start;
+  /* align-items: flex-end; */
+  /* align-items: center; */
+  /* align-items: stretch; /* for this to work I need to remove 'height' in .col */
 }
 
 .col{
-  flex-basis: 26%;
-  flex-shrink: 0;
-  display: flex;
-
+  flex-basis: 20%;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center; */
   text-align: center;
   background-color: rgb(105, 39, 39);
   color: white;
-  border: 2px solid white;
-  height: 50px;
+  border: 2px solid rgb(100, 150, 100);
+  height: 200px;
 }
-
