--- a/CourseFiles/CSS3/Flexbox/AlignSelf.css
+++ b/CourseFiles/CSS3/Flexbox/AlignSelf.css
@@ -56,23 +56,41 @@ nav{
 
 .flex{
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-content: space-between;
+  justify-content: center;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  /* justify-content: space-between; */
+  /* justify-content: space-around; */
 
   background-color: rgb(100, 150, 100);
   height: 500px;
 }
 
 .col{
-  flex-basis: 26%;
-  flex-shrink: 0;
+  flex-basis: 20%;
   display: flex;
-
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
   background-color: rgb(105, 39, 39);
   color: white;
   border: 2px solid white;
-  height: 50px;
+  height: 150px;
 }
 
+.col1{
+  height: 50px;
+  align-self: center;
+}
+.col2{
+  height: 250px;
+  align-self: flex-end;
+}
+.col3{
+  height: 125px;
+  align-self: baseline;
+}
+.col4{
+  height: auto;
+  align-self: stretch;
+}
