--- a/CourseFiles/CSS3/Flexbox/Basis.css
+++ b/CourseFiles/CSS3/Flexbox/Basis.css
@@ -54,25 +54,30 @@ nav{
 
 /* Keep above this line */
 
-.flex{
+.row{
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
-  align-content: space-between;
-
-  background-color: rgb(100, 150, 100);
-  height: 500px;
+  margin: 10px;
 }
 
 .col{
-  flex-basis: 26%;
-  flex-shrink: 0;
-  display: flex;
-
-  text-align: center;
-  background-color: rgb(105, 39, 39);
-  color: white;
-  border: 2px solid white;
-  height: 50px;
+  border: 1px solid blue;
+  flex-basis: 100%;
 }
 
+.col1{
+  flex-basis: 50%;
+}
+
+.col2{
+  flex-basis: 25%;
+  flex-grow: 1;
+}
+
+.col3{
+  flex-basis: 75%;
+  flex-grow: 0;
+  flex-shrink: 1;
+}
+
+/* flex-basis == width */
