--- a/CourseFiles/CSS3/Flexbox/EqualSizedColumns.css
+++ b/CourseFiles/CSS3/Flexbox/EqualSizedColumns.css
@@ -54,25 +54,32 @@ nav{
 
 /* Keep above this line */
 
-.flex{
+.flex-parent{
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-content: space-between;
-
-  background-color: rgb(100, 150, 100);
-  height: 500px;
+  border: 1px solid red;
 }
 
-.col{
-  flex-basis: 26%;
+.box1, .box2, .box3{
+  border: 1px solid blue;
+  flex-basis: 33%;
+  flex-shrink: 1;
+  flex-grow: 1;
+}
+
+/* .box1{
+  flex-basis: 50%;
   flex-shrink: 0;
-  display: flex;
-
-  text-align: center;
-  background-color: rgb(105, 39, 39);
-  color: white;
-  border: 2px solid white;
-  height: 50px;
+  flex-grow: 1;
+  background-color: red;
 }
 
+.box2{
+  flex: 0 1 25%;
+  background-color: blue;
+}
+
+.box3{
+  flex-basis: 50%;
+  flex-grow: 1;
+  flex-shrink: 1;
+} */
