--- a/CourseFiles/CSS3/Flexbox/JustifyContent.css
+++ b/CourseFiles/CSS3/Flexbox/JustifyContent.css
@@ -56,23 +56,24 @@ nav{
 
 .flex{
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-content: space-between;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-evenly;
+  /* justify-content: space-between; */
+  /* justify-content: space-around; */
 
   background-color: rgb(100, 150, 100);
   height: 500px;
 }
 
 .col{
-  flex-basis: 26%;
-  flex-shrink: 0;
+  flex-basis: 20%;
   display: flex;
-
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
   background-color: rgb(105, 39, 39);
   color: white;
-  border: 2px solid white;
-  height: 50px;
+  border: 2px solid rgb(100, 150, 100);
+  height: 150px;
 }
-
