--- a/CourseFiles/CSS3/Flexbox/Order.css
+++ b/CourseFiles/CSS3/Flexbox/Order.css
@@ -54,25 +54,26 @@ nav{
 
 /* Keep above this line */
 
-.flex{
+.flex-parent{
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-content: space-between;
-
-  background-color: rgb(100, 150, 100);
-  height: 500px;
+  border: 1px solid red;
 }
 
-.col{
-  flex-basis: 26%;
-  flex-shrink: 0;
-  display: flex;
-
-  text-align: center;
-  background-color: rgb(105, 39, 39);
-  color: white;
-  border: 2px solid white;
-  height: 50px;
+.box1, .box2, .box3{
+  border: 1px solid blue;
+  flex-basis: 33%;
+  flex-shrink: 1;
+  flex-grow: 1;
 }
 
+.box2{
+  order: 1;
+}
+
+.box3{
+  order: 2;
+}
+
+.box1{
+  order: 3;
+}
