--- a/CourseFiles/CSS3/Flexbox/VerticalAlign.css
+++ b/CourseFiles/CSS3/Flexbox/VerticalAlign.css
@@ -54,25 +54,16 @@ nav{
 
 /* Keep above this line */
 
-.flex{
+.big-box{
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-content: space-between;
+  flex-direction: column;
+  
+  justify-content: center;
 
-  background-color: rgb(100, 150, 100);
-  height: 500px;
-}
-
-.col{
-  flex-basis: 26%;
-  flex-shrink: 0;
-  display: flex;
-
-  text-align: center;
-  background-color: rgb(105, 39, 39);
+  width: 300px;
+  height: 300px;
+  margin: 50px auto 0;
+  background-color: rgb(128, 46, 46);
   color: white;
-  border: 2px solid white;
-  height: 50px;
+  text-align: center;
 }
-
