--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ hr{
   width: 50%;
 }
 
-nav{
+/* nav{
   text-align: center;
   font-weight: bold;
   margin: 0 8px 0 8px;
@@ -42,7 +42,7 @@ nav{
   left: 0;
   top: 0;
   right: 0;
-}
+} */
 
 .shadows{
   background-color: darkgoldenrod;
@@ -54,25 +54,55 @@ nav{
 
 /* Keep above this line */
 
-.flex{
+.nav{
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-content: space-between;
-
-  background-color: rgb(100, 150, 100);
-  height: 500px;
+  width: 100%;
+  background-color: white;
+  border: 2px solid #ccc;
+  box-sizing: border-box;
+  padding: 10px 20px;
+  margin-bottom: 40px;
 }
 
-.col{
-  flex-basis: 26%;
+.brand{
+  text-decoration: none;
+  color: #000;
+  font-size: 20px;
+  font-weight: bold;
+  border: 1px solid red;
+  flex-basis: 200px;
+  flex-grow: 1;
   flex-shrink: 0;
-  display: flex;
-
-  text-align: center;
-  background-color: rgb(105, 39, 39);
-  color: white;
-  border: 2px solid white;
-  height: 50px;
 }
 
+.nav-buttons{
+  text-align: right;
+  flex-basis: 50%;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.nav-buttons a{
+  text-decoration: none;
+  color: #000;
+  font-size: 15px;
+  display: inline-block;
+}
+
+.body{
+  display: flex;
+  margin-bottom: ;
+}
+
+.left-column,
+.center-column,
+.right-column{
+  border: 1px solid red;
+  flex: 1 1 33%;
+  margin: 0 20px;
+}
+
+.center-column{
+  flex-basis: 50%;
+  flex-shrink: 0;
+}
