--- a/css/style.css
+++ b/css/style.css
@@ -1,162 +1,172 @@
-body {
-    margin: 0;
-    padding: 0;
-    background: linear-gradient(to bottom, rgb(226, 189, 143), #fff);
-    height: 100%;
+                                    /* body{
+  background-color: rgb(226, 189, 143);
+  color: black;
+  font-family: 'Roboto', Arial, sans-serif;
+  margin-top: 150px;
+  padding: 0 20px 0px 0;
 }
 
-.nav {
-    display: flex;
-    width: 100%;
-    background-color: white;
-    border-bottom: 2px solid green;
-    box-sizing: border-box;
-    padding: 10px 20px;
-    margin-bottom: 40px;
+#body{
+  height: 1000px;
 }
 
-.brand {
-    text-decoration: none;
-    color: #000;
-    font-size: 20px;
-    font-weight: bold;
-    border: 1px solid red;
-    flex-basis: 200px;
-    flex-grow: 1;
-    flex-shrink: 0;
+footer{
+  text-align: center;
+  font-weight: bold;
+  margin-right: -17px ;
+  border: 2px solid green;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: aliceblue;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0; 
 }
 
-.nav-buttons {
-    text-align: right;
-    flex-basis: 50%;
-    flex-grow: 1;
-    flex-shrink: 1;
+hr{
+  color: rebeccapurple;
+  margin-bottom: 20px;
+  width: 50%;
 }
 
-.nav-buttons a {
-    text-decoration: none;
-    color: #000;
-    padding-left: 0;
-    font-size: 15px;
-    display: inline-block;
+nav{
+  text-align: center;
+  font-weight: bold;
+  margin: 0 8px 0 8px;
+  border: 2px solid green;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: aliceblue;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
 }
 
-.body {
-    display: flex;
-    margin-bottom: 40px;
-}
-
-.left-column,
-.center-column,
-.right-column {
-    border: 1px solid red;
-    flex: 1 1 33%;
-    padding: 0 20px;
-}
-
-.center-column {
-    flex-basis: 50%;
-    flex-shrink: 0;
-}
-
-.footer {
-    display: flex;
-    background-color: #111;
-    justify-content: space-around;
-    color: white;
-    padding: 50/;
-}
-
-.footer div {
-    flex-basis: 25%;
-    border: 1px solid rgb(142, 142, 223);
-}
-
-/* Media query */
-
-@media(max-width: 768px) {
-
-    .body,
-    .footer {
-        flex-wrap: wrap;
-    }
-
-    .footer div {
-        flex-basis: 50%;
-        flex-shrink: 0;
-        flex-grow: 0;
-        border: 1px solid rgb(142, 142, 223);
-        margin-bottom: 10px;
-    }
-
-    body {
-        border: 20px solid wheat;
-    }
-
-    .left-column,
-    .center-column,
-    .right-column {
-        flex-basis: 100%;
-        flex-shrink: 0;
-    }
-
-    .center-column {
-        order: 1;
-    }
-
-    .left-column {
-        order: 2;
-    }
-
-    .right-column {
-        order: 3;
-    }
-}
-
-@media(max-width: 425px) {
-
-    .left-column,
-    .center-column,
-    .right-column {
-        text-align: center;
-        margin-bottom: 10px;
-        padding: 10px 20px;
-    }
-
-    .left-column .footer div {
-        flex-basis: 100%;
-        flex-shrink: 0;
-        flex-grow: 0;
-        padding: 110px 20px;
-        margin-bottom: 10px;
-        border: 0;
-        text-align: center;
-    }
-
-    body {
-        border: 20px solid wheat;
-    }
-
-    .left-column,
-    .center-column,
-    .right-column {
-        flex-basis: 100%;
-        flex-shrink: 0;
-    }
-
-    .center-column {
-        order: 1;
-    }
-
-    .left-column {
-        order: 2;
-    }
-
-    .right-column {
-        order: 3;
-    }
-
-    .right-column {
-        display: none;
-    }
-}
+.shadows{
+  background-color: darkgoldenrod;
+  color: black;
+  border-radius: 50%;
+  text-shadow: 2px 2px 10px rgba(250, 247, 247, 0.966);
+  box-shadow: 5px 5px 30px rgba(3, 88, 94, 0.966);
+} */
+                                
+                                Keep above this line body {
+                                    margin: 0;
+                                    padding: 0;
+                                    background: linear-gradient(to bottom, rgb(226, 189, 143), #fff);
+                                    height: 1000px;
+                                }
+                                
+                                .nav {
+                                    display: flex;
+                                    width: 100%;
+                                    background-color: white;
+                                    border-bottom: 2px solid green;
+                                    box-sizing: border-box;
+                                    padding: 10px 20px;
+                                    margin-bottom: 40px;
+                                }
+                                
+                                .brand {
+                                    text-decoration: none;
+                                    color: #000;
+                                    font-size: 20px;
+                                    font-weight: bold;
+                                    border: 1px solid red;
+                                    flex-basis: 200px;
+                                    flex-grow: 1;
+                                    flex-shrink: 0;
+                                }
+                                
+                                .nav-buttons {
+                                    text-align: right;
+                                    flex-basis: 50%;
+                                    flex-grow: 1;
+                                    flex-shrink: 1;
+                                }
+                                
+                                .nav-buttons a {
+                                    text-decoration: none;
+                                    color: #000;
+                                    padding-left: 0;
+                                    font-size: 15px;
+                                    display: inline-block;
+                                }
+                                
+                                .body {
+                                    display: flex;
+                                    flex-grow: 0;
+                                    border: 2px solid green;
+                                    margin-bottom: 10px;
+                                }
+                                
+                                .left-column,
+                                .center-column,
+                                .right-column {
+                                    border: 1px solid red;
+                                    flex: 1 1 33%;
+                                    padding: 0 20px;
+                                }
+                                
+                                .center-column {
+                                    flex-basis: 50%;
+                                    flex-shrink: 0;
+                                }
+                                
+                                .footer {
+                                    display: flex;
+                                    background-color: #111;
+                                    justify-content: space-around;
+                                    color: white;
+                                    padding: 50/;
+                                }
+                                
+                                .footer div {
+                                    flex-basis: 25%;
+                                    border: 1px solid rgb(142, 142, 223);
+                                }
+                                /* Media query */
+                                
+                                @media(max-width: 768px) {
+                                    .body,
+                                    .footer {
+                                        flex-wrap: wrap;
+                                    }
+                                    .footer div {
+                                        flex-basis: 50%;
+                                        flex-shrink: 0;
+                                        flex-grow: 0;
+                                        border: 1px solid rgb(8, 8, 141);
+                                        margin-bottom: 10px;
+                                    }
+                                    .left-column,
+                                    .center-column,
+                                    .right-column {
+                                        flex-basis: 100%;
+                                        flex-shrink: 0;
+                                    }
+                                    .center-column {
+                                        order: 1;
+                                    }
+                                    .left-column {
+                                        order: 2;
+                                    }
+                                    .right-column {
+                                        order: 3;
+                                    }
+                                    .right-column {
+                                        display: none;
+                                    }
+                                }
+                                
+                                @media(max-width: 425px) {
+                                    .footer div {
+                                        flex-basis: 100px;
+                                        flex-shrink: 0;
+                                        flex-grow: 0;
+                                        padding: 10px 20px;
+                                        border: 1px solid rgb(142, 142, 223);
+                                        margin-bottom: 10px;
+                                    }
